@startuml
title ERD - Sales and Distribution Company V2
skinparam linetype ortho

entity Product {
  +product_id : int <<PK>>
  --
  category : string
  name : string
  unit_price : decimal
  stock_quantity : int
}

entity Client {
  +client_id : int <<PK>>
  --
  first_name : string
  last_name : string
  address : string
  city : string
}

entity Employee {
  +employee_id : int <<PK>>
  --
  first_name : string
  last_name : string
  role : string
}

entity User {
  +user_id : int <<PK>>
  --
  login : string
  password_hash : string
  user_category : string
  employee_id : int <<FK>>
}

entity Order {
  +order_id : int <<PK>>
  --
  order_date : date
  client_id : int <<FK>>
  employee_id : int <<FK>>
}

entity OrderLine {
  +order_id : int <<PK, FK>>
  +product_id : int <<PK, FK>>
  --
  quantity : int
  unit_price : decimal
}

entity Audit {
  +audit_id : int <<PK>>
  --
  action_type : string
  action_date : datetime
  description : string
  user_id : int <<FK>>
}

entity Bonus {
  +bonus_id : int <<PK>>
  --
  year : int
  turnover : decimal
  bonus_amount : decimal
  employee_id : int <<FK>>
}

entity Discount {
  +discount_id : int <<PK>>
  --
  year : int
  total_purchases : decimal
  discount_amount : decimal
  client_id : int <<FK>>
}

Client ||--o{ Order
Employee ||--o{ Order
Order ||--o{ OrderLine
Product ||--o{ OrderLine

Employee ||--|| User
User ||--o{ Audit

Employee ||--o{ Bonus
Client ||--o{ Discount

@enduml
